Page web terminé
Baptiste

--- a/baptiste/baptiste.html
+++ b/baptiste/baptiste.html
@@ -7,7 +7,10 @@
 		<div class="bap_Corp">
 			<h1>La Page de Baptiste</h1>
 			<div class="bap_Entete">
-				 
+				 <div class="bap_carre" id="bap_rouge"></div>
+				 <div class="bap_carre" id="bap_vert"></div>
+				 <div class="bap_carre" id="bap_bleu"></div>
+				 <div class="bap_carre" id="bap_orange"></div>
 			</div> 
 		</div>
 	</body>
